--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "expo": {
-    "name": "VetLab Pro App",
-    "slug": "vetlab-pro-app-slug",
+    "name": "frowning-orange-cheese",
+    "slug": "snack-2f0d96cd-bd7f-4e38-ba50-f660550811c1",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -20,7 +21,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.farzan.vetlabpro" // 👈 شناسه اندروید: این خط مشکل قبلی را حل می کند
+      "package": "com.farzan.vetlabpro" // 👈 این خط مشکل نهایی را حل می کند
     },
     "web": {
       "favicon": "./assets/favicon.png"
