--- a/app.json
+++ b/app.json
@@ -1,30 +1,18 @@
 {
   "expo": {
-    "name": "frowning-orange-cheese",
-    "slug": "snack-2f0d96cd-bd7f-4e38-ba50-f660550811c1",
+    "name": "VetLab Pro App",
+    "slug": "vetlab-pro-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "ios": {
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true,
-      "package": "com.farzan.vetlabpro" // این خط، مشکل را حل می‌کند
+      "package": "com.farzan.vetlabpro" // این خط، مشکل نهایی را حل می کند
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    "assetBundlePatterns": [
+      "**/*"
+    ]
   }
 }
